# sfml_rt

./: .gitignore  CMakeLists.txt  Install.md  Vec3.h  imgui.ini  main.cpp
dependencies/: CMakeLists.txt
propagation/: main.py
src/: CMakeLists.txt  Camera.h  Hittable.h  Interval.h  Material.h  Ray.h  Scene.h  Sphere.h  Vec3.h  main.cpp  main_profiler.cpp  utils.h
src_cuda/: AABB.h  BVHNode.h  CMakeLists.txt  Camera.h  Hittable.h  HittableList.h  HoloCamera.h  Interval.h  Material.h  Ray.h  Scene.h  Sphere.h  Triangle.h  Vec3.h  angular_kernel.py  main.cpp  main.cu  main_cgh_cpu.cpp  main_cgh_cpu.cu  main_cgh_gpu.cu  main_profiler.cu  main_profiler_cpu.cpp  main_profiler_cpu.cu  main_rt_gpu.cu  main_rt_gui_cpu.cpp  main_rt_gui_cpu.cu  obj.h  test.cpp  test.cu  utils.h
src_cuda/hittable/: BVHNode.h  Hittable.h  HittableList.h  Sphere.h  Triangle.h
src_cuda/material/: Material.h
